# benford-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh
api/: api.py  api_lambda.py  main.py
api/benford-py/: api.py  api_lambda.py
api/benford-rs/: Cargo.toml
api/benford-rs/src/: main.rs
frontend/: package-lock.json  package.json
frontend/benford-web-page/: package.json
frontend/src/: App.css  App.js  AppBar.js  Home.js  What.js
frontend/src/components/: CustomAppBar.js  Home.css  Home.js  Instagram.js  MyDropzoneArea.js  What.css  What.js
terraform/: .terraform.lock.hcl  apigateway.tf  backend.tf  build.sh  clean.sh  ecr_repo.tf  lambda_function.tf  s3_cloudfront_route53.tf
