[package]
name = "benford-rs"
version = "0.1.0"
authors = ["Charles-Antoine Demetriade <ca.demetriade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
jpeg-decoder = "0.1.22"
serde_json = "1.0.64"
lambda_runtime = "0.3"
tokio = "1.6.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"